Spacing SASS hot fix

--- a/src/Web/Sfa.Das.Sas.Web/Content/src/styles/screen.scss
+++ b/src/Web/Sfa.Das.Sas.Web/Content/src/styles/screen.scss
@@ -629,6 +629,10 @@ aside h2:first-child {
 }
 
 #provider-detail-view {
+    .data-list--compact {
+        margin-bottom: 60px;
+    }
+
     .panel {
         background: $grey-3;
         border-color: $purple;
